updated CV for 2022

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Bo Liu – Web &amp; Mobile Developer</title>
+		<title>Bo Liu – Web &amp; Software Developer</title>
 
 		<!-- Favicon-->
 		<link rel="shortcut icon" sizes="24x24" href="img/User-24.png">    <!-- Favicon -->
@@ -53,7 +53,7 @@
 
 	<header id="header">
 			<h1><a href="index.html">Bo Liu</a></h1>
-			<h2>Web <span class="amp">&amp;</span> Mobile Developer</h2>
+			<h2>Web <span class="amp">&amp;</span> Software Developer</h2>
 		</header>
 		
 		<div id="container">
@@ -64,16 +64,62 @@
 
 					<div class="span8">
 
+
+						<!-- Work Experience Section-->
+						<h2 class="section-heading offset-top">Work Experience</h2>
+						<dl class="timeline">
+							<dt>
+								<strong>Software Developer</strong>
+								<p>2015 - 2022</p>
+							</dt>
+							<dd>
+								<h4>HUI CLOUD SERVICES INC. - Vancouver, BC</h4>
+								<li>
+									Develop both the backend and frontend of HUI CLOUD Software by using PHP (Laravel) and Vue.js
+								</li>
+								<li>
+									Integration with Amazon API, Facebook API, and other third part tools API
+								</li>
+								<li>
+									Deploy web applications to AWS cloud services and regularly monitor the server
+								</li>
+								<li>
+									Collaborate with the product manager on the development of roadmaps
+								</li>
+								<li>
+									Develop and maintain WordPress and Shopify e-commerce websites
+								</li>
+								<li>
+									Test new features and fix bugs
+								</li>
+								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>
+							</dd>
+							<dt>
+								<strong>Web & Mobile Developer</strong>
+								<p>2014 – 2015</p>
+							</dt>
+							<dd>
+								<h4><a href="http://liubo2055.github.io/landing">LAHOO INC. - Burnaby, BC</a></h4>
+								<li>
+									Develop both the backend and frontend of LAHOO websites and iOS app
+								</li>
+								<li>
+									Test new features and fix bugs
+								</li>
+								<a href="https://github.com/liubo2055/landing-page"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://liubo2055.github.io/landing"><i class="fa fa-link"></i></a>
+							</dd>
+						</dl>
+
 						<!-- Education Section-->
 
 						<h2 class="section-heading">Education</h2>
 						<dl class="timeline section">
 
 							<dt>
-							<p>2015-2016</p>
+								<p>2012-2014</p>
 							</dt>
 							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Master of Science</a> <small>of University of British Columbia</small></h4>
 							</dd>
 
 							<dt>
@@ -83,74 +129,56 @@
 								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
 							</dd>
 
+							<dt>
+								<p>2015-2016</p>
+							</dt>
+							<dd>
+								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+							</dd>
+
 						</dl>
 
-
-						<!-- Work Experience Section-->
-						<h2 class="section-heading offset-top">Work Experience</h2>
+						<!-- Awards Section-->
+						<h2 class="section-heading offset-top">Awards</h2>
 						<dl class="timeline">
 							<dt>
-								<strong>Project 1</strong>
-							<p>May – July 2015</p>
+								<p>2012 – 2014</p>
 							</dt>
 							<dd>
-								<h4><a href="https://github.com/liubo2055/COMP-2920-Project">Web Application with PHP, MySQL, and Laravel 5.1</a></h4>
-								<p>
-									Developed and implemented a web flashcards application based on LAMP and Laravel 5.1 framework
-								</p>
-								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>
-							</dd>
-							<dt>
-								<strong>Project 2</strong>
-							<p>Sep – Dec 2014</p>
-							</dt>
-							<dd>
-								<h4><a href="http://liubo2055.github.io/landing">A Landing Page with HTML, CSS, and JavaScript</a></h4>
-								<p>
-									Developed a landing page for BCIT iOS App based on jQuery, Bootstrap, and CSS animations
-								</p>
-								<a href="https://github.com/liubo2055/landing-page"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://liubo2055.github.io/landing"><i class="fa fa-link"></i></a>
-							</dd>
-							<dt>
-								<strong>Project 3</strong>
-							<p>Jan – May 2015</p>
-							</dt>
-							<dd>
-								<h4><a href="https://youtu.be/9byFGVawHy0">An Android News App with Java and Node.js</a></h4>
-								<p>Developed a RESTful API with Node.js, express and mongo DB to publish, edit, and delete news </p>
-								<p>Implemented a news reader with XML and JSON parser, and starred the news with SQLite database</p>
+								<h4>UBC International Tuition Award</h4>
 								<a href="https://github.com/liubo2055/android-news-app"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://youtu.be/9byFGVawHy0"><i class="fa fa-youtube"></i></a>
 							</dd>
 							<dt>
-								<strong>Project 4</strong>
-							<p>May – July 2015</p>
+								<p>2012</p>
 							</dt>
 							<dd>
-								<h4><a href="http://liubo2055.github.io/db">Database Design & SQL Query with Microsoft SQL Server</a></h4>
-								<p>Designed a relational database from scratch to maintain data for alumni of the university in regards to memberships to university clubs.</p>
-								<p>Developed SQL query scripts to create/delete/alter database tables, insert/update/delete table rows, and create/execute stored procedures</p>
-								<a href="http://liubo2055.github.io/db"><i class="fa fa-link"></i></a>
-							</dd>
-							<dt>
-								<strong>Project 5</strong>
-							<p>June – Sep 2014</p>
-							</dt>
-							<dd>
-								<h4><a href="http://youtu.be/Y5BYkI-02ck">Holiday Feet Business App with Objective-C</a></h4>
-								<p>Developed an iOS app for Vancouver local-based business called Holiday Feet</p>
-								<a href="https://github.com/liubo2055/ios-holiday-feet-project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://youtu.be/Y5BYkI-02ck"><i class="fa fa-youtube"></i></a>
-							</dd>
-							<dt>
-								<strong>Project 6</strong>
-							<p>Jan – May 2015</p>
-							</dt>
-							<dd>
-								<h4><a href="https://github.com/liubo2055/accelerometer-game-cordova">Accelerometer Game with Cordova</a></h4>
-								<p>Developed a bumper ball game with Cordova device motion plugin and jQuery mobile UI</p>
-								<a href="https://github.com/liubo2055/accelerometer-game-cordova"><i class="fa fa-github"></i></a>
+								<h4>University of British Columbia Entrance Scholarship</h4>
+								<a href="https://github.com/liubo2055/android-news-app"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://youtu.be/9byFGVawHy0"><i class="fa fa-youtube"></i></a>
 							</dd>
 						</dl>
 
+						<!-- Projects Section-->
+						<h2 class="section-heading offset-top">Projects</h2>
+						<dl class="timeline">
+							<dt>
+								<p>2015</p>
+							</dt>
+							<dd>
+								<strong>Amazon Seller Project Management Tools</strong>
+								<li>Developed and implemented a Laravel web application for Amazon sellers to manage their projects. </li>
+								<a href="https://github.com/liubo2055/ios-holiday-feet-project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://youtu.be/Y5BYkI-02ck"><i class="fa fa-youtube"></i></a>
+							</dd>
+							<dt>
+								<p>2015</p>
+							</dt>
+							<dd>
+								<strong>Database Design & SQL Query with Microsoft SQL Server</strong>
+								<li>Designed a relational database from scratch to maintain data for alumni of the university in regards to memberships to university clubs.</li>
+								<li>Developed SQL query scripts to create/delete/alter database tables, insert/update/delete table rows, and create/execute stored procedures</li>
+								<li>Please visit http://liubo2055.github.io/db to see all design and SQL query documentations</li>
+								<a href="https://github.com/liubo2055/accelerometer-game-cordova"><i class="fa fa-github"></i></a>
+							</dd>
+						</dl>
 
 						<!-- Download Resume Button-->
 						<p class="span4 offset2"><a class="button secondary full" href="bo-liu-resume.pdf"><i class="icon-download"></i> Download My Resume</a></p>
@@ -165,36 +193,59 @@
 							<ul class="bold">
 								<li>Web and Mobile Development</li>
 								<li>Database Design and Query</li>
-								<li>Responsive Web Design</li>
-								<li>Web Standards</li>
+								<li>API Integrations</li>
+								<li>PHP Bot Scraping</li>
 							</ul>
 							<h3>Back-End Web Development</h3>
 							<ul class="bold plain">
-								<li>Laravel 5.1 &amp; PHP <div class="progress-bar"><div style="width: 95%"></div></div></li>
-								<li>WordPress <div class="progress-bar"><div style="width: 80%"></div></div></li>
-								<li>Java Web Development <div class="progress-bar"><div style="width: 70%"></div></div></li>
+								<li>Laravel &amp; PHP <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>WordPress <div class="progress-bar"><div style="width: 90%"></div></div></li>
+								<li>Shopify <div class="progress-bar"><div style="width: 90%"></div></div></li>
+								<li>Java Web Development <div class="progress-bar"><div style="width: 60%"></div></div></li>
 								<li>Node.js <div class="progress-bar"><div style="width: 50%"></div></div></li>
 								<li>ASP.Net <div class="progress-bar"><div style="width: 50%"></div></div></li>
 							</ul>
 							<h3>Front-End Web Design</h3>
 							<ul class="bold plain">
-								<li>HTML / CSS <div class="progress-bar"><div style="width: 85%"></div></div></li>
-								<li>JavaScript / jQuery <div class="progress-bar"><div style="width: 80%"></div></div></li>
-								<li>Bootstrap <div class="progress-bar"><div style="width: 80%"></div></div></li>
+								<li>Vue.js <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>HTML / CSS <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>JavaScript / jQuery <div class="progress-bar"><div style="width: 90%"></div></div></li>
+								<li>Bootstrap <div class="progress-bar"><div style="width: 95%"></div></div></li>
 								<li>AngularJS <div class="progress-bar"><div style="width: 50%"></div></div></li>
 							</ul>
 							<h3>Database Design &amp; Development</h3>
 							<ul class="bold plain">
-								<li>Microsoft SQL Server<div class="progress-bar"><div style="width: 90%"></div></div></li>
-								<li>MySQL<div class="progress-bar"><div style="width: 85%"></div></div></li>
+								<li>PostgreSQL<div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>MySQL<div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>Redis<div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>Microsoft SQL Server<div class="progress-bar"><div style="width: 80%"></div></div></li>
 								<li>SQLite <div class="progress-bar"><div style="width: 80%"></div></div></li>
-								<li>MongoDB <div class="progress-bar"><div style="width: 60%"></div></div></li>
+								<li>DynamoDB <div class="progress-bar"><div style="width: 80%"></div></div></li>
+								<li>Data Warehouse <div class="progress-bar"><div style="width: 50%"></div></div></li>
+							</ul>
+							<h3>DevOps</h3>
+							<ul class="bold plain">
+								<li>AWS EC2, RDS, SES, SNS, Pinpoint, IAM, Load Balancer<div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>Aliyun SMS API<div class="progress-bar"><div style="width: 95%"></div></div></li>
+							</ul>
+							<h3>API Integrations</h3>
+							<ul class="bold plain">
+								<li>Amazon MWS API, SP-API, Product Advertising API <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>Facebook Marketing API, Graph API <div class="progress-bar"><div style="width: 90%"></div></div></li>
+								<li>PayPal API, Stripe API, Alipay API <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>Lots of third party tools API <div class="progress-bar"><div style="width: 90%"></div></div></li>
 							</ul>
 							<h3>Mobile Development</h3>
 							<ul class="bold plain">
-								<li>Android <div class="progress-bar"><div style="width: 75%"></div></div></li>
+								<li>React Native & Expo <div class="progress-bar"><div style="width: 70%"></div></div></li>
+								<li>Android <div class="progress-bar"><div style="width: 50%"></div></div></li>
 								<li>iOS <div class="progress-bar"><div style="width: 50%"></div></div></li>
 								<li>Cordova <div class="progress-bar"><div style="width: 50%"></div></div></li>
+							</ul>
+							<h3>Methodologies</h3>
+							<ul class="bold plain">
+								<li>OOP, Entity-Relationship Diagram, Agile, MVC, REST, SOAP <div class="progress-bar"><div style="width: 95%"></div></div></li>
+								<li>UML, Data Flow Diagram, <div class="progress-bar"><div style="width: 80%"></div></div></li>
 							</ul>
 						</div>
 
