remove few links and icons

--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 								<li>
 									Test new features and fix bugs
 								</li>
-								<a href="https://github.com/liubo2055/COMP-2920-Project"><i class="fa fa-github"></i></a>
 							</dd>
 							<dt>
 								<strong>Web & Mobile Developer</strong>
@@ -106,7 +105,6 @@
 								<li>
 									Test new features and fix bugs
 								</li>
-								<a href="https://github.com/liubo2055/landing-page"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://liubo2055.github.io/landing"><i class="fa fa-link"></i></a>
 							</dd>
 						</dl>
 
@@ -146,14 +144,12 @@
 							</dt>
 							<dd>
 								<h4>UBC International Tuition Award</h4>
-								<a href="https://github.com/liubo2055/android-news-app"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://youtu.be/9byFGVawHy0"><i class="fa fa-youtube"></i></a>
 							</dd>
 							<dt>
 								<p>2012</p>
 							</dt>
 							<dd>
 								<h4>University of British Columbia Entrance Scholarship</h4>
-								<a href="https://github.com/liubo2055/android-news-app"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="https://youtu.be/9byFGVawHy0"><i class="fa fa-youtube"></i></a>
 							</dd>
 						</dl>
 
@@ -166,7 +162,7 @@
 							<dd>
 								<strong>Amazon Seller Project Management Tools</strong>
 								<li>Developed and implemented a Laravel web application for Amazon sellers to manage their projects. </li>
-								<a href="https://github.com/liubo2055/ios-holiday-feet-project"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp;<a href="http://youtu.be/Y5BYkI-02ck"><i class="fa fa-youtube"></i></a>
+								<a href="https://github.com/liubo2055/Amazon-Seller-Project-Management-Tools"><i class="fa fa-github"></i></a>&nbsp;&nbsp;&nbsp
 							</dd>
 							<dt>
 								<p>2015</p>
@@ -176,7 +172,6 @@
 								<li>Designed a relational database from scratch to maintain data for alumni of the university in regards to memberships to university clubs.</li>
 								<li>Developed SQL query scripts to create/delete/alter database tables, insert/update/delete table rows, and create/execute stored procedures</li>
 								<li>Please visit http://liubo2055.github.io/db to see all design and SQL query documentations</li>
-								<a href="https://github.com/liubo2055/accelerometer-game-cordova"><i class="fa fa-github"></i></a>
 							</dd>
 						</dl>
 
