--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 								<li>Designed a relational database from scratch to maintain data for alumni of the university in regards to memberships to university clubs.</li>
 								<li>Developed SQL query scripts to create/delete/alter database tables, insert/update/delete table rows, and create/execute stored procedures</li>
 								<li>Please visit http://liubo2055.github.io/db to see all design and SQL query documentations</li>
+								<a href="http://liubo2055.github.io/db"><i class="fa fa-github"></i></a>
 							</dd>
 						</dl>
 
