--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 		<!-- Google Fonts: Lato -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic">
 		
 		<!-- Icon Fonts: Entypo -->
 		<link rel="stylesheet" href="css/icons.css">
@@ -98,7 +98,7 @@
 								<p>2014 – 2015</p>
 							</dt>
 							<dd>
-								<h4><a href="http://liubo2055.github.io/landing">LAHOO INC. - Burnaby, BC</a></h4>
+								<h4>LAHOO INC. - Burnaby, BC</h4>
 								<li>
 									Develop both the backend and frontend of LAHOO websites and iOS app
 								</li>
@@ -117,21 +117,21 @@
 								<p>2012-2014</p>
 							</dt>
 							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Master of Science</a> <small>of University of British Columbia</small></h4>
+								<h4>Master of Science<small>of University of British Columbia</small></h4>
 							</dd>
 
 							<dt>
 							<p>2014-2015</p>
 							</dt>
 							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+								<h4><a href="https://www.bcit.ca/study/programs/6465acert">Web and Mobile Application Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
 							</dd>
 
 							<dt>
 								<p>2015-2016</p>
 							</dt>
 							<dd>
-								<h4><a href="http://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
+								<h4><a href="https://www.bcit.ca/study/programs/6445acert">Advanced Java Development Certificate</a> <small>of British Columbia Institute of Technology</small></h4>
 							</dd>
 
 						</dl>
@@ -171,8 +171,8 @@
 								<strong>Database Design & SQL Query with Microsoft SQL Server</strong>
 								<li>Designed a relational database from scratch to maintain data for alumni of the university in regards to memberships to university clubs.</li>
 								<li>Developed SQL query scripts to create/delete/alter database tables, insert/update/delete table rows, and create/execute stored procedures</li>
-								<li>Please visit http://liubo2055.github.io/db to see all design and SQL query documentations</li>
-								<a href="http://liubo2055.github.io/db"><i class="fa fa-github"></i></a>
+								<li>Please visit https://liubo2055.github.io/db to see all design and SQL query documentations</li>
+								<a href="https://liubo2055.github.io/db"><i class="fa fa-github"></i></a>
 							</dd>
 						</dl>
 
