added work experience

--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
 		<!--<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">-->
 	<!--</a>-->
 
-
-
-
 	<header id="header">
 			<h1><a href="index.html">Bo Liu</a></h1>
 			<h2>Web <span class="amp">&amp;</span> Software Developer</h2>
@@ -68,6 +65,28 @@
 						<!-- Work Experience Section-->
 						<h2 class="section-heading offset-top">Work Experience</h2>
 						<dl class="timeline">
+							<dt>
+								<strong>Software Developer</strong>
+								<p>2022 - 2023</p>
+							</dt>
+							<dd>
+								<h4>GENERAL INTERNET INC. - Coquitlam, BC</h4>
+								<li>
+									Developed both the backend and frontend of BOS Systems using PHP (Code Igniter Framework)
+								</li>
+								<li>
+									Automated the deployment of code to EC2 instances through Elastic Beanstalk scripts, ensuring libraries are ready, SSL is auto-installed, and security groups/firewalls are set up seamlessly
+								</li>
+								<li>
+									Integrated AWS APIs and streamlined various AWS automation processes
+								</li>
+								<li>
+									Implemented a universal solution for real-time user login status across different domains using AWS Lambda functions, DynamoDB, and AWS API Gateway web sockets
+								</li>
+								<li>
+									Conducted testing of new features and addressed bug fixes
+								</li>
+							</dd>
 							<dt>
 								<strong>Software Developer</strong>
 								<p>2015 - 2022</p>
@@ -88,19 +107,6 @@
 								</li>
 								<li>
 									Develop and maintain WordPress and Shopify e-commerce websites
-								</li>
-								<li>
-									Test new features and fix bugs
-								</li>
-							</dd>
-							<dt>
-								<strong>Web & Mobile Developer</strong>
-								<p>2014 – 2015</p>
-							</dt>
-							<dd>
-								<h4>LAHOO INC. - Burnaby, BC</h4>
-								<li>
-									Develop both the backend and frontend of LAHOO websites and iOS app
 								</li>
 								<li>
 									Test new features and fix bugs
