hided phone number

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
 						<a href="mailto:liubo2055@gmail.com" target="_top"><p><i class="icon-mail"></i></a> <strong>E-mail:</strong> liubo2055@gmail.com</p>
 
-						<p><i class="icon-phone"></i> <strong>Phone:</strong> 778-836-0999</p>
+<!--						<p><i class="icon-phone"></i> <strong>Phone:</strong> 778-836-0999</p>-->
 
 					</div>
 
